zip -> deb artifact